[project]
name = "air-travel"
version = "0.1.0"
description = ""
authors = [
    {name = "EvgeniyAnistratov",email = "evgeneanistratov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "fastapi[standard] (>=0.125.0,<0.126.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
